# Waves

./: .gitignore  CMakeLists.txt  README.md
Try/: GeraArqDocBase.cpp  GeraIndice.py  Split.py
cmake/: globalVariables.cmake
include/indexer/: parse_query.h
include/processador/parser/: parser.h  valstringuniao.h
libs/internal/indexer/lib/: teste.c
libs/internal/prefixinmem/src/: prefixinmem.cc
src/: CMakeLists.txt
src/indexer/: CMakeLists.txt  DescritorColecaoWBR.cc  DescritorInfoweb.cc  HashDoc.cc  Heap.cc  IndiceInvertido.cc  SegmentaURL.cc  Vocabulario.cpp  valstringuniao_utf8.cc
src/indexer/run/: estimaDistribuicao.cc  geraIdf.cc  geraIndiceFrequencia.cc  geraNorma.cc  geraParcial.cc  geraSkiplistBlockMaxFIX.cc  mergeParcial.cc  splitIndex.cc
src/indexer/src/run/: estimaDistribuicao.cc  geraIndiceFrequencia.cc  geraNorma.cc  geraParcial.cc  geraSkiplistBlockMaxFIX.cc  splitIndex.cc
src/processador/: CMakeLists.txt  config
src/processador/core/: PostingList.h
src/processador/parser/: parser.cc  valstringuniao.cc
src/processador/run/: geraR_Indice.cc  queryProcessor.cpp
